<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search.View.SearchActivityImpl">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <fragment
        android:id="@+id/place_autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        android:id="@+id/last_places_list"
        android:layout_height="0dp"
        android:layout_weight=".25">

    </ListView>

    <TextView
        android:id="@+id/fromTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/big_font"
        android:layout_margin="@dimen/standard_margin"
        android:textColor="@color/black"
        android:hint="@string/fromHint"
        android:textAlignment="textStart" />

    <TextView
        android:id="@+id/whereTextView"
        android:layout_width="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:textColor="@color/black"
        android:hint="@string/whereHint"
        android:textAlignment="textStart"
        android:textSize="@dimen/big_font"
        android:layout_height="wrap_content"/>
</LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/localisation"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/standard_margin"
        android:layout_marginBottom="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/location_icon" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/searchButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:layout_height="wrap_content"
        android:src="@drawable/search_icon" />
</RelativeLayout>