<resources>
    <string name="app_name">DoCelu</string>
    <string name="testString">test</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="error">Coś poszło nie tak :/</string>
    <string name="emptyPlace">Wypełnij najpierw oba pola!</string>
    <string name="routeNotFound">Nie znaleziono trasy :/</string>
    <string name="permissionRequired">Bez nadania uprawnień nie można okreslić lokalizacji!</string>
    <string name="fromHint">Z...</string>
    <string name="whereHint">Do...</string>
    <string name="stops">przystanki</string>
</resources>
